--- a/DOM advanced/styles.css
+++ b/DOM advanced/styles.css
@@ -76,12 +76,12 @@ h1, h2{
     background: #333;
 }
 
-.add-book{
+#add-book{
     width: 400px;
     margin: 0 auto;
 }
 
-.add-book input{
+#add-book input{
     display: block;
     margin: 20px 0;
     padding: 10px;
@@ -93,7 +93,7 @@ h1, h2{
     float: left;
 }
 
-.add-book button{
+#add-book button{
     border: 1px solid #9361bf;
     background: #9361bf;
     padding: 10px 20px;
@@ -109,8 +109,39 @@ h1, h2{
     color: white;
 }
 
-.add-book:after{
+#add-book:after{
     content: '';
     display: block;
     clear: both;
 }
+
+#add-book #hide{
+    width: 30px;
+}
+#add-book label{
+    line-height: 52px;
+}
+
+
+#tabbed-content li{
+    display: inline-block;
+    padding: 10px 14px;
+    background: #ddd;
+    border-radius: 4px;
+    cursor: pointer;
+    margin-right: 10px;
+}
+
+#tabbed-content .panel{
+    display: none;
+    border: 1px solid #ddd;
+    padding: 0 10px;
+    border-radius: 4px;
+}
+
+#tabbed-content .panel.active{
+    display: block;
+}
+© 2022 GitHub, Inc.
+Terms
+Privacy
