--- a/DOM advanced/styles.css
+++ b/DOM advanced/styles.css
@@ -126,7 +126,7 @@ h1, h2{
 #tabbed-content li{
     display: inline-block;
     padding: 10px 14px;
-    background: #ddd;
+    background: blueviolet;
     border-radius: 4px;
     cursor: pointer;
     margin-right: 10px;
